<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartGlucoseManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Reminder">Reminder_String</string>
    <string name="strReminder">Reminder</string>
    <string name="title_activity_remind">RemindActivity</string>
    <string name="reminder_title">Reminder</string>
    <string name="method_button_click">onButtonPress</string>
    <string name="testing">Testing</string>
    <string name="insulin">Insulin &amp; Medication</string>
    <string name="meal">Meal</string>
    <string name="exercises">Excercises</string>
    <string name="title_activity_testing">TestingActivity</string>
    <string name="monday">Monday</string>
    <string name="change">Change</string>
    <string name="title_activity_glucose_entry">GlucoseEntryActivity</string>
    <string name="smart_glucose_manager">Smart Glucose Manager</string>
    <string name="title_activity_insulin">InsulinActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_meds_and_insuline">MedsAndInsulineActivity</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="title_activity_logbook_satistics">LogbookSatisticsActivity</string>
    <string name="title_activity_dct">DCTActivity</string>
    <string name="title_activity_logbook">LogbookActivity</string>
    <string name="title_activity_satistics">SatisticsActivity</string>
    <string name="title_activity_meal">MealActivity</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="sgm">SGM</string>
    <string name="title_activity_meds_and_insuline_home">MedsAndInsulineHomeActivity</string>
    <string name="title_activity_oral">OralActivity</string>

</resources>
